--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "jsx": "react-jsx",
     "types": ["vite/client", "vite-plugin-svgr/client", "vitest/globals"]
   },
-  "include": ["src", "test", "vite-env.ts", "vite.config.ts"]
+  "include": ["src", "test", "vite-env.ts", "vite.config.ts", "src/pages/LandingPage.tsx"]
 }
